# crm-agentic-reasoning-engine

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CUsersSazzadAppDataLocalTempclaudec--Users-Sazzad-OneDrive-Desktop-acme-crm-ai-companion13e6c1a0-82dd-4e14-83bb-7a881f3e8d82scratchpadstream_output.txt  DEMO_CHEATSHEET.md  Dockerfile  README.md  bash.exe.stackdump  docker-compose.yml  eval_results.json  eval_results_full.json  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: backend.yml  e2e.yml  frontend.yml  rag-eval.yml
backend/: __init__.py  act_fetch.py  config.py  exceptions.py  main.py  middleware.py  requirements.txt  routes.py  startup.py
backend/agent/: __init__.py  audit.py  cache.py  config.py  conversation.py  datastore.py  demo.py  formatters.py  graph.py  intent_handlers.py  llm_helpers.py  llm_router.py  memory.py  nodes.py  orchestrator.py  prompts.py  question_tree.py  rag_tools.py  router.py  schemas.py  state.py  streaming.py  tools.py
backend/api/: chat.py  data.py  health.py
backend/common/: __init__.py  company_resolver.py  context_builder.py  error_handling.py  formatters.py  judge.py  llm_client.py  prompts.py  query_ops.py
backend/core/: __init__.py  config.py  exceptions.py  llm.py  middleware.py
backend/data/: generate_private_texts.py  generate_texts.py
backend/eval/: __init__.py  base.py  baseline.py  cli.py  formatting.py  judge.py  langsmith.py  langsmith_latency.py  llm_client.py  models.py  output.py  parallel.py  prompts.py  ragas_judge.py  runner.py  shared.py  slo.py
backend/llm/: __init__.py  client.py
backend/rag/: __init__.py  account.py  audit.py  cli.py  config.py  eval.py  eval_account.py  eval_questions.json  models.py  pipeline.py  private.py  retrieval.py  utils.py
backend/scripts/: profile_e2e.py
backend/tests/: __init__.py  test_data_endpoints.py  test_llm_client.py  test_middleware.py
backend/utils/: __init__.py  prompt.py
data/csv/: opportunities.csv
data/docs/: history_activities_and_calendar.md  opportunities_pipeline_and_forecasts.md  system_performance_and_limits.md
data/logs/: agent_audit.jsonl
docs/: ARCHITECTURE.md  CODE_MAP.md  LANGGRAPH_DIAGRAM.md  data-flow.md
fine_tuning/: crm_lora_finetune.ipynb
frontend/: .eslintrc.json  .prettierignore  .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  server.js  vitest.config.ts
frontend/e2e/: advanced-scenarios.spec.ts  chat-enhanced.spec.ts  chat.spec.ts  data-explorer-enhanced.spec.ts  data-explorer.spec.ts  sections-and-ui.spec.ts  streaming-enhanced.spec.ts  streaming.spec.ts
frontend/playwright-report/: index.html
frontend/public/: robots.txt
frontend/src/: App.tsx  config.ts
frontend/test-results/: .last-run.json
project1_rag/: __init__.py  account_rag.py  config.py  eval_account_rag.py  ingest_docs.py  ingest_private_text.py  private_retrieval.py  private_text_builder.py  rag_pipeline.py  requirements.txt  retrieval_backend.py  utils.py
project1_rag/tests/: __init__.py  test_account_rag.py
project2_agentic/: __init__.py  agent.py  datastore.py  demo_agent.py  requirements.txt  router.py  schemas.py  tools.py
project2_agentic/tests/: __init__.py  test_agentic.py
scripts/: ci.sh
tests/: __init__.py  conftest.py  test_account_rag.py
tests/backend/: test_act_fetch.py  test_config.py  test_coverage_boost.py  test_data_endpoints.py  test_e2e.py  test_exceptions.py  test_llm_client.py  test_main.py  test_middleware.py  test_routes.py
tests/e2e/: __init__.py  test_chat_flow.py
tests/rag/: __init__.py  test_account.py  test_retrieval.py
(+479 files in other folders)
