[project]
name = "acme-crm-ai-companion"
version = "1.0.0"
description = "AI-powered CRM companion with RAG and Agent capabilities"
requires-python = ">=3.10"
readme = "README.md"

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.isort]
known-first-party = ["backend"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    # Eval harnesses are CLI tools that run against live LLMs
    "backend/*/eval/*_eval.py",
    # CLI entry points (not unit testable)
    "backend/eval/tree/__main__.py",
    # Standalone scripts (not proper test files)
    "backend/eval/route/test_sql_planner.py",
    # Real RAGAS evaluation requires live OpenAI API (tested via integration tests)
    "backend/eval/judge.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    # Entry point blocks
    "if __name__ == .__main__.:",
    # Exception handlers that only trigger at runtime
    "except nx.NetworkXNoPath:",
]
